# claude_colony

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  lib.rs  main.rs
src/render/: atlas.rs  camera.rs  debug_panel.rs  fog.rs  inspector.rs  mod.rs  overlays.rs  scenery.rs  sky.rs  sprites.rs  tilemap.rs  ui.rs
src/scenarios/: brood_hatches_to_worker.rs  builder.rs  dirt_settles_into_slope.rs  escape_simple_chamber.rs  escape_winding_tunnel.rs  fifty_of_hundred_complete_haul.rs  forager_picks_up_food.rs  four_workers_kill_spider.rs  full_haul_cycle.rs  grass_grows_over_time.rs  hauler_drops_outside.rs  hauler_falls_off_pile.rs  hauler_unsticks_after_attempts.rs  invader_wave_escalation.rs  invaders_arrive_from_offscreen.rs  mod.rs  mower_kills_workers.rs  mower_retires_after_laps.rs  mower_shaves_piles.rs  mower_shortens_grass.rs  queen_lays_egg.rs  queen_migrates_deeper.rs  rewind_doesnt_break_combat.rs  single_ant_ten_haul_cycles.rs  soldier_kills_lone_spider.rs  spider_hunts_nearby_ant.rs  spider_kills_lone_worker.rs  spider_triggers_alarm.rs  surface_holes_keep_spacing.rs  surface_openings_stay_narrow.rs  swarm_kills_spider.rs  worker_engages_nearby_spider.rs  worker_per_frame_hostile_reflex.rs
src/sim/: ai_predator.rs  ai_worker.rs  balance.rs  brood.rs  combat.rs  components.rs  day_night.rs  event_log.rs  exploration.rs  food_spawn.rs  foraging.rs  history.rs  hostiles.rs  lifecycle.rs  mod.rs  movement.rs  queen.rs  scenery.rs  soldier.rs  spatial.rs  time.rs
tests/: population_stress.rs  scenarios.rs  sim_smoke.rs  speed_invariance.rs
(+15 files in other folders)
