[package]
name    = "colony"
version = "0.1.0"
edition = "2021"
authors = ["Greg Poisson <greg.b.poisson@gmail.com>"]
description = "SimAnt-inspired ant colony simulator targeting thousands of on-screen creatures"

[dependencies]
macroquad = "0.4"
bevy_ecs  = "0.14"
glam      = { version = "0.29", features = ["bytemuck"] }
rand      = "0.8"
serde     = { version = "1", features = ["derive"] }
bincode   = "1.3"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 1
